<resources>
    <string name="app_name">Petagram</string>
    <string name="card_view_textNombre">Nombre</string>
    <string name="text_menu_about">Acerca de</string>
    <string name="text_menu_contacto">Contacto</string>
    <string name="text_menu_fav">Fav</string>
    <string name="text_input_nombre">Nombre:</string>
    <string name="text_input_correo">Correo:</string>
    <string name="text_input_mensaje">Mensaje:</string>
    <string name="text_view_contactoTitulo">Contactanos!</string>
    <string name="text_view_contactoMensaje">Envianos un correo y nos comunicaremos</string>
    <string name="button_enviar_comentario">Enviar Comentario</string>
    <string name="text_view_acercaDeEncabezado">About</string>
    <string name="text_view_acercaDeInformacion">Información del sistema</string>
    <string name="text_view_acercaDeVersion">Versión: 1.0</string>
    <string name="text_view_acercaDeDesarrollador">Desarrollador: YamSM</string>
    <string name="text_cardViewMiMascota">Rora</string>


</resources>
