<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ferncuy.curso3semana4.layout.ContactoActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_contactoTitulo"
        android:textSize="50sp"
        android:layout_gravity="center"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_view_contactoMensaje"
        android:textSize="25sp"
        android:layout_gravity="center"
        android:textAlignment="center"
        android:textStyle="italic"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_nombre"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_correo"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_input_mensaje"
            android:paddingBottom="45dp"/>

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_enviar_comentario"
        android:textSize="@dimen/buttonTamañoTextoBotonEnviar"
        android:theme="@style/botones"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:onClick="onClick"/>

</LinearLayout>